--- a/ai-saas/.env
+++ b/ai-saas/.env
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWJzb2x1dGUtZGFzc2llLTQxLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_pzIOgxg3Av3hsnJfkWyQ5174GWcyoTsBv7ZRFLfCdf
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
